--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
         <i class="fa-solid fa-circle-question"></i>
-        <h2 class="question">Can you do my Homme Work ?</h2>
+        <h2 class="question"> Do You Love ME ?</h2>
         <div class="btn-group">
             <button class="yes-btn">YES</button>
             <button class="no-btn">NO</button>
